--- a/package.json
+++ b/package.json
@@ -2,16 +2,32 @@
   "name": "burger",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
-  "author": "",
-  "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
+    "method-override": "^3.0.0",
     "mysql": "^2.16.0"
-  }
+  },"devDependencies": {},
+  "engines": {
+    "node": "8.11.2",
+    "npm": "5.6.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/jloring95/burger.git"
+  },
+  "author": "Jesse",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/jloring95/burger/issues"
+  },
+  "homepage": "https://github.com/jloring95/burger#readme"
 }
+
+
